--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=https://tulbox-server.onrender.com
+REACT_APP_BASE_URL=https://tulbox.vercel.app
 
 
 REACT_APP_FIREBASE_API_KEY="AIzaSyDRkgvOlc9VrD1Ef7MezmR7QbKhVR4rmhc"
