--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=http://server.tulbox.mx
+REACT_APP_BASE_URL=http://server.tulbox.mx/
 
 
 REACT_APP_FIREBASE_API_KEY="AIzaSyDRkgvOlc9VrD1Ef7MezmR7QbKhVR4rmhc"
